# ledger-getquote-blocktap

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  Makefile  README.md  appveyor.yml  build.rs
ci/: install.sh  prepare_release.sh  utils.sh
pkg/brew/: ledger-getquote-blocktap-bin.rb
schema/: blocktap.json  single.graphql
src/: main.rs  single_currency.rs
